--- a/minimalist/index.html
+++ b/minimalist/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimalist.!</title>
+    <title>Minimalist</title>
     <!--==-css-==-->
     <link rel="stylesheet" href="./main.css">
     <!--==-favicon-==-->
@@ -59,6 +59,73 @@
     </section>
     <!-- ======/-intro section ended-====== -->
 
+
+
+    <!-- ======-main section started-====== -->
+    <main>
+        <div class="container">
+            <div class="main-items">
+                <img src="./images/Bitmap2.png" alt="png" class="bitmap2">
+                <img src="./images/Bitmap.png" alt="png" class="bitmap1">
+                <div class="main-item">
+                    <h3>About Me</h3>
+                    <p>
+                        I’m a junior front-end developer looking for a new role in an exciting company. I focus on
+                        writing accessible HTML, using modern CSS practices and writing clean JavaScript. When writing
+                        JavaScript code, I mostly use React, but I can adapt to whatever tools are required. I’m based
+                        in London, UK, but I’m happy working remotely and have experience in remote teams. When I’m not
+                        coding, you’ll find me outdoors. I love being out in nature whether that’s going for a walk, run
+                        or cycling. I’d love you to check out my work.
+                    </p>
+                    <a href="#">
+                        <span>go to portofilo</span>
+                    </a>
+                </div>
+            </div>
+            <div class="main-end">
+                <h4>
+                    Interested in doing a project together?
+                </h4>
+                <div class="line"></div>
+                <a href="#">contact me</a>
+            </div>
+        </div>
+    </main>
+    <!-- ======/-main section ended-====== -->
+
+
+
+
+
+    <!-- ======-footer section started-====== -->
+    <footer>
+        <div class="container">
+            <div class="footer-items">
+                <div class="footer-item1">
+                    <a href="./index.html">
+                        <img src="./images/footerLogo.svg" alt="svg">
+                    </a>
+                    <ul>
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">portofilo</a></li>
+                        <li><a href="#">contact me</a></li>
+                    </ul>
+                </div>
+                <div class="footer-item2">
+                    <a href="#">
+                        <img src="./images/footerGithub.svg" alt="svg">
+                    </a>
+                    <a href="#">
+                        <img src="./images/footerTwitter.svg" alt="svg">
+                    </a>
+                    <a href="#">
+                        <img src="./images/footerIn.svg" alt="svg">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- ======/-footer section ended-====== -->
 </body>
 
 </html>
