I have completed this project completely, this website is fully responsive for desktop and mobile

--- a/minimalist/index.html
+++ b/minimalist/index.html
@@ -25,9 +25,9 @@
                     <img src="./images/navLogo.svg" alt="logo">
                 </a>
                 <ul>
-                    <li><a href="#">home</a></li>
+                    <li><a href="./index.html">home</a></li>
                     <li><a href="./portofilo.html">portofilo</a></li>
-                    <li><a href="#">contact me</a></li>
+                    <li><a href="./contact.html">contact me</a></li>
                 </ul>
                 <label for="check" class="check_Button">
                     <i class="fa-solid fa-bars"></i>
@@ -49,10 +49,10 @@
                     <h2>
                         Hey, I’m Alex Spencer and I love building beautiful websites
                     </h2>
-                    <button>
+                    <a href="#aboutMe">
                         <img src="./images/intro-btn-Logo.png" alt="png" class="intro_img2">
                         <p>about me</p>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -65,10 +65,10 @@
     <main>
         <div class="container">
             <div class="main-items">
-                <img src="./images/Bitmap2.png" alt="png" class="bitmap2">
-                <img src="./images/Bitmap.png" alt="png" class="bitmap1">
+                <img src="./images/Bitmap2.png" alt="png" class="bitmap2" title="Mr Alex">
+                <img src="./images/Bitmap.png" alt="png" class="bitmap1" title="Mr Alex">
                 <div class="main-item">
-                    <h3>About Me</h3>
+                    <h3 id="aboutMe">About Me</h3>
                     <p>
                         I’m a junior front-end developer looking for a new role in an exciting company. I focus on
                         writing accessible HTML, using modern CSS practices and writing clean JavaScript. When writing
@@ -77,7 +77,7 @@
                         coding, you’ll find me outdoors. I love being out in nature whether that’s going for a walk, run
                         or cycling. I’d love you to check out my work.
                     </p>
-                    <a href="#">
+                    <a href="./portofilo.html">
                         <span>go to portofilo</span>
                     </a>
                 </div>
@@ -87,7 +87,7 @@
                     Interested in doing a project together?
                 </h4>
                 <div class="line"></div>
-                <a href="#">contact me</a>
+                <a href="./contact.html">contact me</a>
             </div>
         </div>
     </main>
@@ -106,9 +106,9 @@
                         <img src="./images/footerLogo.svg" alt="svg">
                     </a>
                     <ul>
-                        <li><a href="#">home</a></li>
-                        <li><a href="#">portofilo</a></li>
-                        <li><a href="#">contact me</a></li>
+                        <li><a href="./index.html">home</a></li>
+                        <li><a href="./portofilo.html">portofilo</a></li>
+                        <li><a href="./contact.html">contact me</a></li>
                     </ul>
                 </div>
                 <div class="footer-item2">
