--- a/minimalist/portofilo.html
+++ b/minimalist/portofilo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimalist (portofilo)`</title>
+    <title>Minimalist (portofilo)</title>
     <!--==-css-==-->
     <link rel="stylesheet" href="./portofilo.css">
     <!--==-favicon-==-->
@@ -27,7 +27,7 @@
                 <ul>
                     <li><a href="./index.html">home</a></li>
                     <li><a href="./portofilo.html">portofilo</a></li>
-                    <li><a href="#">contact me</a></li>
+                    <li><a href="./contact.html">contact me</a></li>
                 </ul>
                 <label for="check" class="check_Button">
                     <i class="fa-solid fa-bars"></i>
@@ -130,9 +130,9 @@
                         <img src="./images/footerLogo.svg" alt="svg">
                     </a>
                     <ul>
-                        <li><a href="#">home</a></li>
-                        <li><a href="#">portofilo</a></li>
-                        <li><a href="#">contact me</a></li>
+                        <li><a href="./index.html">home</a></li>
+                        <li><a href="./portofilo.html">portofilo</a></li>
+                        <li><a href="./contact.html">contact me</a></li>
                     </ul>
                 </div>
                 <div class="footer-item2">
@@ -151,4 +151,5 @@
     </footer>
     <!-- ======/-footer section ended-====== -->
 </body>
+
 </html>
